@@ -2,6 +2,8 @@
 
 * 0.1.1    UNRELEASED
 
++ Handle empty repository without raising an exception (#65)
++ Add sphinx docs (#1)
 + Rename module pydantic_models (#61)
 
 * 0.1.0    2025-03-07
